# img2svg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD-PARTY.md  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/img2svg-core/: Cargo.toml
crates/img2svg-core/src/: classify.rs  contour.rs  emit.rs  error.rs  gradient.rs  layering.rs  lib.rs  oklab.rs  options.rs  preclean.rs  quantize.rs  regions.rs  segment.rs  trace.rs
crates/img2svg-core/tests/: pipeline.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  store.ts  styles.css
web/src/components/: BeforeAfterSlider.tsx  Controls.tsx  Dropzone.tsx  Editor.tsx  ExportButtons.tsx  LayerPreview.tsx  PanZoom.tsx  StatsBar.tsx
web/src/components/editor/: LayerRow.tsx  LayersPanel.tsx  RetracePanel.tsx  Variations.tsx
web/src/lib/: decode.ts  eyeDropper.ts  layers.ts  pipeline.ts  svgo.ts  traceOptions.ts  useHistory.ts
web/src/wasm/: coreTypes.ts  loadCore.ts
web/src/worker/: trace.worker.ts
