[package]
name = "img2svg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser-based vectorizer that turns raster images into layered, color-faithful SVGs"
repository = "https://github.com/matthew-demidoff/img2svg"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vtracer = "0.6.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }

wasm-bindgen = { version = "0.2", optional = true }
serde_json = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true, features = ["js"] }

[features]
wasm = [
    "dep:wasm-bindgen",
    "dep:serde_json",
    "dep:console_error_panic_hook",
    "dep:getrandom",
]
